--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">FeetballFootball</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
+    <string name="toast_message_match_is_not_started">경기가 시작되지 않았습니다.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
